--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <body>
     <h1>Odin Recipes</h1>
     <img src="./images/chef.jpg" alt="chef" />
-    <a href="./recipes/bacalhau-a-braz.html">Bacalhau a Braz</a>
-    <a href=""></a>
+    <h2><strong>Menus:</strong></h2>
+    <ul>
+        <li>
+            <a href="./recipes/bacalhau-a-braz.html">Bacalhau a Braz</a>
+        </li>
+        <li>
+            <a href="./recipes/eggplant-bolognese.html">Eggplant Bolognese</a>
+        </li>
+    </ul>
 </body>
 </html>
