--- a/recipes/eggplant-bolognese.html
+++ b/recipes/eggplant-bolognese.html
@@ -8,7 +8,14 @@
 <body>
     <h1>Eggplant bolognese</h1>
     <img src="../images/eggplant-bolognese.jpg" alt="eggplant bolognese">
-    <ol>
+    <h3>
+        Italian recipes are my favorite especially when eggplant is included.
+        This is a hearty bolognese and a paleo recipe that is prepared in one pot!
+        You can add any of your favorite vegetables such as peppers or zucchini.
+        You serve over spaghetti squash, zucchini noodles, or your favorite pasta! Enjoy!
+    </h3>
+    <h2>Ingredients:</h2>
+    <ul>
         <li>¼ cup olive oil, divided</li>
         <li>3 links pork sausage, casings removed</li>
         <li>½ pound ground beef</li>
@@ -23,6 +30,12 @@
         <li>1 teaspoon dried parsley</li>
         <li>1 teaspoon dried oregano</li>
         <li>1 ½ teaspoons dried basil</li>
+    </ul>
+    <h2>Directions:</h2>
+    <ol>
+        <li>Heat 2 tablespoons olive oil in a large Dutch oven over medium heat; cook pork sausage, breaking it onto smaller pieces with a wooden spoon, until browned, about 5 minutes. Add ground beef; cook and stir until beef is browned and crumbly, about 5 minutes. Drain excess fat.</li>
+        <li>Pour remaining olive oil over sausage mixture; add eggplant, onion, garlic, salt, and black pepper. Cook and stir until lightly browned, about 10 minutes. Add mushrooms and continuing cooking until tender, about 5 minutes.</li>
+        <li>Mix crushed tomatoes, diced tomatoes, parsley, oregano, and basil into sausage mixture; bring to a boil. Cover Dutch oven, reduce heat to medium-low, and simmer for 30 minutes.</li>
     </ol>
     <a href="../index.html">back to menu</a>
 
